--- a/src/app/shared/search-select/search-select.component.html
+++ b/src/app/shared/search-select/search-select.component.html
@@ -20,7 +20,7 @@
           >
           <ion-select
             *ngIf="!updatingSelect"
-            (ionChange)="changeQuery($event.target.value)"
+            (ionChange)="changeQuery($event.target)"
             [value]="atributoSelectedAsInt"
             interface="popover"
           >
