--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -12,10 +12,10 @@
       <ion-select
         *ngIf="innerSelect"
         (ionChange)="output()"
-        [(ngModel)]="atributoSelected"
         interface="popover"
         class="ion-margin-end"
-      >
+        >
+        <!-- [(ngModel)]="atributoSelected" -->
         <!-- no funciona ngModel -->
         <!-- [value]="getAtributoValor(atributosPasados[0])" -->
         <ion-select-option
@@ -31,7 +31,7 @@
     <ion-row *ngIf="!innerSelect">
       <ion-list>
         <ion-radio-group
-          (ionChange)="changeRadio($event.target.value)"
+          (ionChange)="changeRadio($event.target)"
           [value]="atributoSelected"
           [allowEmptySelection]="true"
         >
