--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -258,4 +258,10 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  
+  <ng-template #spinner>
+    <ion-row class="ion-justify-content-center">
+      <ion-spinner></ion-spinner>
+    </ion-row>
+  </ng-template>
 </ion-content>
