botones para salir de change-password, menu mobile se cierra al cambiar ruta

--- a/src/app/usuario/usuarios-abm/usuario-post/change-password/change-password.component.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/change-password/change-password.component.html
@@ -1,10 +1,15 @@
 <div [ngClass]="tamWidth > 768 ? 'ion-page' : ''">
   <ion-header>
     <ion-toolbar>
-      <ion-row class="ion-align-items-center ion-margin-end ion-margin-start">
+      <ion-row class="ion-align-items-center ion-margin-end">
         <!-- <ion-back-button [defaultHref]="'/concursos/' + id"></ion-back-button> -->
-        <!-- <ion-back-button (click)="dismiss()"></ion-back-button> -->
-        <ion-col>
+        <ion-col size="2" class="ion-hide-md-up">
+          <!-- <ion-back-button (click)="modalController.dismiss()"></ion-back-button> -->
+          <ion-button (click)="modalController.dismiss()" color="dark" fill="clear" class="">
+            <ion-icon name="arrow-back-outline"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col [ngClass]="{'ion-margin-start': tamWidth > 678}">
           <h5 class="ion-text-wrap">Cambiar contraseña</h5>
         </ion-col>
         <ion-col size="1" class="ion-hide-md-down">
@@ -35,6 +40,7 @@
                       class="text-right"
                       name="old_password"
                       [(ngModel)]="old_password"
+                      required
                     ></ion-input>
                   </ion-col>
                   <ion-col
@@ -59,6 +65,7 @@
                       class="text-right"
                       name="new_password"
                       [(ngModel)]="new_password"
+                      required
                     ></ion-input>
                   </ion-col>
                   <ion-col
@@ -86,12 +93,17 @@
                   </ion-col>
 
                   <ion-col
-                    class="ion-align-self-center"
                     pull-sm="3"
+                    class="ion-align-self-center"
                     size="12"
                     size-sm="3"
                   >
-                    <ion-back-button text="Cancelar" icon=""></ion-back-button>
+                  <ion-button
+                    expand="block"
+                    (click)="modalController.dismiss()"
+                    fill="clear"
+                  >Cancelar</ion-button>
+                      <!-- <ion-back-button text="Cancelar" icon=""></ion-back-button> -->
                   </ion-col>
                 </ion-row>
               </ion-col>
