--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -116,6 +116,11 @@
               </ion-fab-button>
               <!-- </ion-fab> -->
             </ion-row>
+            <ion-row>
+              <ion-button
+                [routerLink]="['secciones']"
+              >Administrar secciones</ion-button>
+            </ion-row>
             <!-- <ion-searchbar [(ngModel)]="searchQuery"></ion-searchbar> -->
             <!-- <ion-searchbar (ionChange)="buscarConcursos($event.target.value)"></ion-searchbar> -->
 
