--- a/src/app/usuario/usuarios-abm/usuario-post/change-password/change-password.component.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="tamWidth > 768 ? 'ion-page' : ''">
+<div [ngClass]="responsiveService.isDesktop ? 'ion-page' : ''">
   <ion-header>
     <ion-toolbar>
       <ion-row class="ion-align-items-center ion-margin-end">
@@ -9,7 +9,7 @@
             <ion-icon name="arrow-back-outline"></ion-icon>
           </ion-button>
         </ion-col>
-        <ion-col [ngClass]="{'ion-margin-start': tamWidth > 678}">
+        <ion-col [ngClass]="{'ion-margin-start': responsiveService.isDesktop}">
           <h5 class="ion-text-wrap">Cambiar contraseña</h5>
         </ion-col>
         <ion-col size="1" class="ion-hide-md-down">
