--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
   <ion-content>
     <!-- sidebar -->
-    <app-sidebar *ngIf="tamWidth < 768"></app-sidebar>
+    <app-sidebar *ngIf="!responsiveService.isDesktop"></app-sidebar>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-content>
   <!-- <ion-footer class="ion-no-border">
