--- a/src/app/concursos/secciones-abm/secciones-abm.page.html
+++ b/src/app/concursos/secciones-abm/secciones-abm.page.html
@@ -22,22 +22,20 @@
 </ion-header>
 
 <ion-content>
-
   <ion-grid class="ion-no-padding ion-no-margin">
     <ion-row class="ion-justify-content-center">
       <!-- filtro -->
       <ion-col size="3" *ngIf="mostrarFiltro">
         <ion-col>
           <ion-title class="ion-margin-top">Búsqueda</ion-title>
-  
+
           <app-search-bar
             [(data)]="sections"
             [atributosObj]="atributosBusqueda"
           ></app-search-bar>
- 
         </ion-col>
       </ion-col>
-  
+
       <ion-col>
         <ion-row>
           <ion-col size="11.5" push="0.25">
@@ -66,48 +64,15 @@
               <h1 class="ion-margin-top ion-margin-bottom ion-margin-end">
                 Secciones
               </h1>
-              <ion-fab-button
-                size="small"
-                (click)="postSection()"
-              >
+              <ion-fab-button size="small" (click)="postSection()">
                 <ion-icon name="add"></ion-icon>
               </ion-fab-button>
             </ion-row>
-  
-            <!-- <ion-row class="ion-align-items-center ion-padding-bottom">
-              <ion-col size="10" size-sm="11">
-              </ion-col>
-              <ion-col size="2" size-sm="1">
-                <ion-row
-                  class="
-                    ion-justify-content-center
-                    ion-align-items-center
-                    ion-align-self-center
-                  "
-                >
-                  <ion-button
-                    (click)="mostrarFiltro = !mostrarFiltro"
-                    color="medium"
-                    expand="block"
-                    class="
-                      ion-justify-content-center
-                      ion-align-items-center
-                      ion-align-self-center
-                    "
-                  >
-                    <ion-icon name="funnel"></ion-icon>
-                    <!- - <ion-icon name="options"></ion-icon> - ->
-                  </ion-button>
-                </ion-row>
-              </ion-col>
-            </ion-row> -->
-            <ion-list>
+            <ion-list class="ion-no-padding">
               <ion-item color="dark">
                 <ion-grid>
                   <ion-row class="ion-padding-end">
-                    <!-- class="ion-text-center" -->
-                    <ion-col size="11" size-md="10" class="">
-                      <!-- <b>Obra</b> -->
+                    <ion-col class="">
                       <ion-row>
                         <app-th-sort
                           [sortFn]="ordenarPorNombre"
@@ -116,195 +81,137 @@
                         ></app-th-sort>
                       </ion-row>
                     </ion-col>
-                    <!-- <ion-col
-                      class="ion-hide-md-down ion-padding-start"
-                      size="4"
-                      size-md="3"
-                    >
-                      <ion-row>
-                        <app-th-sort
-                          [sortFn]="ordenarPorAutor"
-                          [(data)]="resultadosConcurso"
-                          title="Autor"
-                        ></app-th-sort>
-                      </ion-row>
-                    </ion-col>
-  
-                    <ion-col size="3" size-md="2">
-                      <ion-row>
-                        <app-th-sort
-                          [(data)]="resultadosConcurso"
-                          title="Premio"
-                        ></app-th-sort>
-                      </ion-row>
-                    </ion-col>
-                    <ion-col class="ion-hide-md-down" size="2">
-                      <ion-row>
-                        <app-th-sort
-                          [(data)]="resultadosConcurso"
-                          title="Puntaje"
-                        ></app-th-sort>
-                      </ion-row>
-                    </ion-col>
-                    <ion-col class="ion-hide-md-up" size="2">
-                      <ion-row>
-                        <app-th-sort
-                          [(data)]="resultadosConcurso"
-                          title="Ptje"
-                        ></app-th-sort>
-                      </ion-row>
-                    </ion-col> -->
-  
-                    <ion-col size="2"></ion-col>
+
+                    <!-- <ion-col size="2"></ion-col> -->
                   </ion-row>
                 </ion-grid>
               </ion-item>
             </ion-list>
             <!-- <ion-list *ngIf="!loading; else spinner"> -->
-            <ion-list>
+            <ion-list class="ion-no-padding">
               <ion-item lines="none" class="ion-no-padding lista-elem">
                 <!-- <ion-grid *ngIf="!loading"> -->
-                <ion-grid *ngIf="sections.length > 0; else texto">
+                <ion-grid
+                  class="ion-no-padding"
+                  *ngIf="sections.length > 0; else texto"
+                >
                   <!-- <ion-grid *ngIf="(resultadosConcurso | async) as contestResults"> -->
-                  <!-- class="ion-text-center" -->
-                  <ion-item class="ion-no-padding" *ngFor="let s of getParentSections()">
-                    <ion-grid class="ion-no-padding">
-                      <ion-row size="12">
-                        <ion-col
-                          size="11"
-                          size-md="10"
-                          class="ion-align-self-start"
-                        >
-                          <ion-item lines="none">
-                            <ion-row>
-                              <ion-col 
-                                class="ion-padding-top"
-                                style="--ion-padding: 8px;"
+                  <ion-grid class="ion-no-padding">
+                    <ion-row size="12">
+                      <ion-col class="ion-align-self-start">
+                        <ion-item-group *ngFor="let s of getParentSections()">
+                          <ion-item-divider lines="full" mode="ios">
+                            <ion-label> <b>{{ s.name }}</b></ion-label>
+                            <ion-col
+                              slot="end"
+                              size="1"
+                              size-md="2"
+                              class="ion-align-self-start ion-align-self-center"
+                            >
+                              <ion-buttons
+                                class="
+                                  ion-hide-md-down ion-justify-content-center
+                                "
                               >
-                                <ion-row>
-                                  <ion-title>
-                                    <b>{{ s.name }}</b>
-                                  </ion-title>
-                                </ion-row>
-                                <ion-row>
-                                  <ul>
-                                    <li *ngFor="let s1 of getSubSections(s.id)">
-                                      <ion-row class="w-100 ion-align-items-center">
-                                        <ion-label>
-                                          <ion-card-subtitle>{{s1.name}}</ion-card-subtitle>
-                                          <!-- <h3>I'm a big deal</h3>
-                                          <p>Listen, I've had a pretty messed up day...</p> -->
-                                        </ion-label>
-                                        <ion-buttons
-                                          class="ion-hide-md-down ion-justify-content-center ion-margin-start"
-                                        >
-                                          <ion-button size="small"
-                                            (click)="
-                                              postSection(s1)
-                                            "
-                                          >
-                                            <ion-icon name="create"></ion-icon>
-                                          </ion-button>
-                                          <ion-button size="small"
-                                            (click)="deleteSection(s1)"
-                                          >
-                                            <ion-icon name="trash"></ion-icon>
-                                          </ion-button>
-                                        </ion-buttons>
-                                        <ion-buttons
-                                          class="ion-hide-md-up"
-                                        >
-                                          <ion-button (click)="mostrarAcciones($event, s1)">
-                                            <ion-icon
-                                              slot="icon-only"
-                                              ios="ellipsis-horizontal"
-                                              md="ellipsis-vertical"
-                                            ></ion-icon>
-                                          </ion-button>
-                                        </ion-buttons>
-                                      </ion-row>
-                                    </li>
-                            
-                                  </ul>
-                                </ion-row>
-                              </ion-col>
-                            </ion-row>
-                            <ion-row>
-                            </ion-row>
-                          </ion-item>
-                        </ion-col>
-                        <!-- <ion-col
-                          class="ion-hide-md-down ion-align-self-center"
-                          size="4"
-                          size-md="3"
-                        >
-                          <ion-item lines="none">
-                            <ion-label>
-                              <ion-card-subtitle
-                                title="Fotoclub/Agrupación del autor"
-                                >{{
-                                  getFotoclubName(r.image.profile_id)
-                                }}</ion-card-subtitle
-                              >
-                              <ion-text title="Autor de la obra">
-                                <b>{{ getFullName(r.image.profile_id) }}</b>
-                              </ion-text>
-                            </ion-label>
-                          </ion-item>
-                        </ion-col>
-                        <ion-col
-                          class="ion-align-self-center"
-                          size="3"
-                          size-md="2"
-                        >
-                          <ion-text>{{ r.metric.prize }}</ion-text>
-                        </ion-col>
-                        <ion-col class="ion-align-self-center" size="2">
-                          <ion-text>{{ r.metric.score }}</ion-text>
-                        </ion-col> -->
-  
-                        <ion-col
-                          size="1"
-                          size-md="2"
-                          class="ion-align-self-start"
-                        >
-                          <!-- class="ion-align-self-center" -->
-                          <ion-buttons
-                            class="ion-hide-md-down ion-justify-content-center"
+                                <ion-button title="Agregar subsección" (click)="postSubSection(s)">
+                                  <ion-icon name="add-outline"></ion-icon>
+                                </ion-button>
+                                <ion-button title="Editar sección" (click)="postSection(s)">
+                                  <ion-icon name="create"></ion-icon>
+                                </ion-button>
+                                <ion-button title="Eliminar sección" (click)="deleteSection(s)">
+                                  <ion-icon name="trash"></ion-icon>
+                                </ion-button>
+                              </ion-buttons>
+                              <ion-buttons class="ion-hide-md-up">
+                                <ion-button
+                                  (click)="mostrarAcciones($event, s)"
+                                >
+                                  <ion-icon
+                                    slot="icon-only"
+                                    ios="ellipsis-horizontal"
+                                    md="ellipsis-vertical"
+                                  ></ion-icon>
+                                </ion-button>
+                              </ion-buttons>
+                            </ion-col>
+                          </ion-item-divider>
+
+                          <ng-template #textoSeccion>
+                            <ion-item>
+                              <ion-label>
+                                <ion-card-subtitle
+                                  >No contiene subsecciones
+                                </ion-card-subtitle>
+                              </ion-label>
+                            </ion-item>
+                          </ng-template>
+                          <!-- TODO: refactorizar el ngIf -->
+                          <div
+                            *ngIf="getSubSections(s.id).length > 0; else textoSeccion"
                           >
-                            <ion-button
-                              (click)="postSubSection(s)"
+                            <ion-item
+                              *ngFor="let s1 of getSubSections(s.id) as subsections"
                             >
-                              <ion-icon name="add-outline"></ion-icon>
-                            </ion-button>
-                            <ion-button
-                              (click)="
-                                postSection(s)
-                              "
-                            >
-                              <ion-icon name="create"></ion-icon>
-                            </ion-button>
-                            <ion-button
-                              (click)="deleteSection(s)"
-                            >
-                              <ion-icon name="trash"></ion-icon>
-                            </ion-button>
-                          </ion-buttons>
-                          <ion-buttons
-                            class="ion-hide-md-up"
-                          >
-                            <ion-button (click)="mostrarAcciones($event, s)">
-                              <ion-icon
-                                slot="icon-only"
-                                ios="ellipsis-horizontal"
-                                md="ellipsis-vertical"
-                              ></ion-icon>
-                            </ion-button>
-                          </ion-buttons>
-                        </ion-col>
-                      </ion-row>
-                    </ion-grid>
-                  </ion-item>
+                              <ion-row class="w-100 ion-align-items-center">
+                                <!-- TODO: debería ser una tabla NxN para poder tene dos tablas por separado de carga!!!!  -->
+                                <!-- para achicar el tamaño del sector de la subseccion modificar el  size-md de la sig columna -->
+                                <!-- <ion-col size-md="5"> -->
+                                  <ion-col>
+                                  <ion-row>
+                                    <ion-col size="10">
+                                      <ion-text>{{s1.name}} </ion-text>
+                                    </ion-col>
+                                    <ion-col
+                                      size="2"
+                                      size-md="2"
+                                      class="ion-float-end"
+                                    >
+                                      <!-- ion-hide-md-down -->
+                                      <ion-buttons
+                                        class="
+                                          ion-justify-content-end
+                                          ion-margin-start
+                                        "
+                                      >
+                                        <ion-button
+                                        title="Editar subsección"
+                                          size="small"
+                                          (click)="
+                                                        postSection(s1)
+                                                      "
+                                        >
+                                          <ion-icon name="create"></ion-icon>
+                                        </ion-button>
+                                        <ion-button
+                                        title="Eliminar subsección"
+                                          size="small"
+                                          (click)="deleteSection(s1)"
+                                        >
+                                          <ion-icon name="trash"></ion-icon>
+                                        </ion-button>
+                                      </ion-buttons>
+                                      <!-- <ion-buttons class="ion-hide-md-up">
+                                                <ion-button
+                                                  (click)="mostrarAcciones($event, s1)"
+                                                >
+                                                  <ion-icon
+                                                    slot="icon-only"
+                                                    ios="ellipsis-horizontal"
+                                                    md="ellipsis-vertical"
+                                                  ></ion-icon>
+                                                </ion-button>
+                                              </ion-buttons> -->
+                                    </ion-col>
+                                  </ion-row>
+                                </ion-col>
+                              </ion-row>
+                            </ion-item>
+                          </div>
+                        </ion-item-group>
+                      </ion-col>
+                    </ion-row>
+                  </ion-grid>
                 </ion-grid>
                 <ng-template #texto>No hay secciones</ng-template>
               </ion-item>
