--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -19,27 +19,156 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-col size="12" size-md="10">
-        <form
-          #f="ngForm"
-          (ngSubmit)="postConcurso(f)"
-          *ngIf="!loading; else spinner"
-        >
+        <form #f="ngForm" (ngSubmit)="postConcurso(f)" *ngIf="!loading; else spinner">
           <ion-list class="ion-align-items-end">
             <!-- <ion-col size="12" size-md="4" > -->
             <ion-item>
               <!-- <ion-col> -->
               <ion-label position="floating">Nombre</ion-label>
-              <ion-input
-                name="name"
-                [ngModel]="concurso.name"
-                autocapitalize="sentences"
-                required
-              ></ion-input>
+              <ion-input name="name" [ngModel]="concurso.name" autocapitalize="sentences" required></ion-input>
               <!-- </ion-col> -->
             </ion-item>
 
-            <ion-row>
-              <!-- <ion-col> -->
+
+            <!-- <ion-list>
+              <ion-radio-group
+                [(ngModel)]="typeSubsection"
+                [ngModelOptions]="{standalone: true}"
+              >
+                <ion-list-header>
+                  <ion-row class="ion-align-items-center">
+                    <ion-label>Tipo de sección</ion-label>
+                  </ion-row>
+                </ion-list-header>
+      
+                <ion-item>
+                  <ion-label>Sección general</ion-label>
+                  <ion-radio slot="start" [value]="false"></ion-radio>
+                </ion-item>
+                <ion-item>
+                  <ion-label>Subsección</ion-label>
+                  <ion-radio slot="start" [value]="true"></ion-radio>
+                </ion-item>
+              </ion-radio-group>
+            </ion-list> -->
+
+
+            <!-- <ion-item> -->
+            <ion-list>
+              <ion-row class="ion-align-items-center">
+                <ion-col size="10" size-md="2">
+                  <ion-list-header>Categorias</ion-list-header>
+                </ion-col>
+                <ion-col>
+                  <ion-button (click)="mostrarCategorias = !mostrarCategorias" size="small" fill="clear">
+                    <ion-icon name="chevron-{{mostrarCategorias ? 'up' : 'down'}}-outline"></ion-icon>
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+              <!-- <ion-label>Categorias</ion-label> -->
+              <div *ngIf="mostrarCategorias">
+                <ion-item *ngFor="let c of categorias" lines="none">
+                  <ion-label>{{c.name}}</ion-label>
+                  <ion-checkbox slot="end" [(ngModel)]="getCategoriaSeleccionada(c.id).seleccionada"
+                    [ngModelOptions]="{standalone: true}"></ion-checkbox>
+                </ion-item>
+
+              </div>
+            </ion-list>
+            <!-- </ion-item> -->
+            <ion-list>
+              <ion-row class="ion-align-items-center">
+                <ion-col size="10" size-md="2">
+                  <ion-list-header>Secciones</ion-list-header>
+                </ion-col>
+                <ion-col>
+                  <ion-button (click)="mostrarSecciones = !mostrarSecciones" size="small" fill="clear">
+                    <ion-icon name="chevron-{{mostrarSecciones ? 'up' : 'down'}}-outline"></ion-icon>
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+              <!-- <ion-label>Categorias</ion-label> -->
+              <div *ngIf="mostrarSecciones">
+                <!-- <ion-item *ngFor="let s of getParentSections()" lines="none">
+                  <ion-label>{{s.name}}</ion-label>
+                  <ion-checkbox slot="end" [(ngModel)]="getSeccionSeleccionada(s.id).seleccionada"
+                    [ngModelOptions]="{standalone: true}"></ion-checkbox>
+                </ion-item> -->
+
+                <ion-item-group *ngFor="let s of getParentSections()">
+                  <ion-item-divider lines="full" mode="ios">
+                    <ion-label> <b>{{ s.name }}</b></ion-label>
+                    <ion-checkbox slot="end" [(ngModel)]="getSeccionSeleccionada(s.id).seleccionada"
+                      [ngModelOptions]="{standalone: true}"></ion-checkbox>
+                    <!-- <ion-col slot="end" size="1" size-md="2" class="ion-align-self-start ion-align-self-center">
+                      <ion-buttons class="
+                                  ion-hide-md-down ion-justify-content-center
+                                ">
+                        <ion-button title="Agregar subsección" (click)="postSubSection(s)">
+                          <ion-icon name="add-outline"></ion-icon>
+                        </ion-button>
+                        <ion-button title="Editar sección" (click)="postSection(s)">
+                          <ion-icon name="create"></ion-icon>
+                        </ion-button>
+                        <ion-button title="Eliminar sección" (click)="deleteSection(s)">
+                          <ion-icon name="trash"></ion-icon>
+                        </ion-button>
+                      </ion-buttons>
+                      <ion-buttons class="ion-hide-md-up">
+                        <ion-button (click)="mostrarAcciones($event, s)">
+                          <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
+                        </ion-button>
+                      </ion-buttons>
+                    </ion-col> -->
+                  </ion-item-divider>
+
+                  <ng-template #textoSeccion>
+                    <ion-item>
+                      <ion-label>
+                        <ion-card-subtitle>No contiene subsecciones
+                        </ion-card-subtitle>
+                      </ion-label>
+                    </ion-item>
+                  </ng-template>
+                  <!-- TODO: refactorizar el ngIf -->
+                  <div *ngIf="getSubSections(s.id).length > 0; else textoSeccion">
+                    <ion-item *ngFor="let s1 of getSubSections(s.id) as subsections">
+                      <ion-label>{{s1.name}}</ion-label>
+                      <ion-checkbox slot="end" [(ngModel)]="getSeccionSeleccionada(s1.id).seleccionada"
+                        [ngModelOptions]="{standalone: true}"></ion-checkbox>
+
+                      <!-- <ion-row class="w-100 ion-align-items-center">
+                        <ion-col>
+                          <ion-row>
+                            <ion-col size="10">
+                              <ion-text>{{s1.name}} </ion-text>
+                            </ion-col>
+                            <ion-col size="2" size-md="2" class="ion-float-end">
+                              <ion-buttons class="
+                                          ion-justify-content-end
+                                          ion-margin-start
+                                        ">
+                                <ion-button title="Editar subsección" size="small" (click)="
+                                                        postSection(s1)
+                                                      ">
+                                  <ion-icon name="create"></ion-icon>
+                                </ion-button>
+                                <ion-button title="Eliminar subsección" size="small" (click)="deleteSection(s1)">
+                                  <ion-icon name="trash"></ion-icon>
+                                </ion-button>
+                              </ion-buttons>
+                            </ion-col>
+                          </ion-row>
+                        </ion-col>
+                      </ion-row> -->
+                    </ion-item>
+                  </div>
+                </ion-item-group>
+
+              </div>
+            </ion-list>
+
+            <!-- <ion-row>
 
                 <ion-item>
                   <ion-label>Categorías</ion-label>
@@ -49,8 +178,6 @@
                     ngDefaultControl
                     [disabled]="categoriasNoInscriptas.length == 0"
                   >
-                    <!-- required -->
-                    <!-- [(value)]="image.profile_id" -->
                     <ion-select-option
                       *ngFor="let c of categoriasNoInscriptas"
                       [value]="c.id"
@@ -66,26 +193,17 @@
                       <ion-row class="w-100 ion-align-items-center">
                         <ion-label>
                           <ion-card-subtitle>{{getCategoryName(c1.category_id)}}</ion-card-subtitle>
-                          <!-- <h3>I'm a big deal</h3>
-                          <p>Listen, I've had a pretty messed up day...</p> -->
                         </ion-label>
                         <ion-buttons
                           class="ion-justify-content-center ion-margin-start"
                         >
-                          <!-- <ion-button size="small"
-                            (click)="
-                              postSection(s1)
-                            "
-                          >
-                            <ion-icon name="create"></ion-icon>
-                          </ion-button> -->
                           <ion-button size="small"
                             (click)="desinscribirCategoria(c1.id)"
                           >
                             <ion-icon name="trash"></ion-icon>
                           </ion-button>
                         </ion-buttons>
-                        <!-- <ion-buttons
+                        <!- - <ion-buttons
                           class="ion-hide-md-up"
                         >
                           <ion-button (click)="mostrarAcciones($event, s1)">
@@ -95,15 +213,14 @@
                               md="ellipsis-vertical"
                             ></ion-icon>
                           </ion-button>
-                        </ion-buttons> -->
+                        </ion-buttons> - ->
                       </ion-row>
                     </li>
             
                   </ul>
                 
                 </ion-list>
-              <!-- </ion-col> -->
-            </ion-row>
+            </ion-row> -->
             <!-- </ion-col> -->
             <!-- <ion-col size="12" size-md="8"> -->
             <ion-item>
@@ -118,18 +235,10 @@
                   ></ion-input> -->
                   <!-- TODO: revisar scroll en PC, ver css global -->
                   <!-- TODO: modificar el max de fecha como la fecha actual + 10 años -->
-                  <ion-datetime
-                    displayFormat="DD/MMM/YYYY"
-                    monthValues="01,02,03,04,05,06,07,08,09,10,11,12"
-                    monthShortNames="ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic"
-                    min="1967"
-                    max="2050"
-                    name="start_date"
-                    [ngModel]="concurso.start_date"
-                    required
-                    doneText="Elegir"
-                    cancelText="Cancelar"
-                  ></ion-datetime>
+                  <ion-datetime displayFormat="DD/MMM/YYYY" monthValues="01,02,03,04,05,06,07,08,09,10,11,12"
+                    monthShortNames="ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic" min="1967" max="2050"
+                    name="start_date" [ngModel]="concurso.start_date" required doneText="Elegir" cancelText="Cancelar">
+                  </ion-datetime>
                 </ion-item>
               </ion-col>
               <ion-col size="6" class="ion-no-padding">
@@ -142,18 +251,10 @@
                     required
                   ></ion-input> -->
                   <!-- TODO: modificar el max de fecha como la fecha actual + 10 años -->
-                  <ion-datetime
-                    displayFormat="DD/MMM/YYYY"
-                    monthValues="01,02,03,04,05,06,07,08,09,10,11,12"
-                    monthShortNames="ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic"
-                    min="1967"
-                    max="2050"
-                    name="end_date"
-                    [ngModel]="concurso.end_date"
-                    required
-                    doneText="Elegir"
-                    cancelText="Cancelar"
-                  ></ion-datetime>
+                  <ion-datetime displayFormat="DD/MMM/YYYY" monthValues="01,02,03,04,05,06,07,08,09,10,11,12"
+                    monthShortNames="ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic" min="1967" max="2050"
+                    name="end_date" [ngModel]="concurso.end_date" required doneText="Elegir" cancelText="Cancelar">
+                  </ion-datetime>
                 </ion-item>
               </ion-col>
             </ion-item>
@@ -162,13 +263,8 @@
             <ion-item>
               <!-- <ion-col> -->
               <ion-label position="floating">Descripción</ion-label>
-              <ion-textarea
-                autocapitalize="sentences"
-                auto-grow="true"
-                name="description"
-                [ngModel]="concurso.description"
-                required
-              ></ion-textarea>
+              <ion-textarea autocapitalize="sentences" auto-grow="true" name="description"
+                [ngModel]="concurso.description" required></ion-textarea>
               <!-- </ion-col> -->
             </ion-item>
           </ion-list>
@@ -176,16 +272,8 @@
           <ion-row class="ion-justify-content-end">
             <ion-col size="12">
               <ion-row class="ion-justify-content-end">
-                <ion-col
-                  push-sm="3"
-                  size="12"
-                  size-sm="3"
-                  class="ion-align-self-center"
-                >
-                  <app-btn-post
-                    [posting]="posting"
-                    [disabled]="!f.valid"
-                  ></app-btn-post>
+                <ion-col push-sm="3" size="12" size-sm="3" class="ion-align-self-center">
+                  <app-btn-post [posting]="posting" [disabled]="!f.valid"></app-btn-post>
                   <!-- <ion-button
                     expand="block"
                     type="submit"
@@ -200,18 +288,9 @@
                   </ion-button> -->
                 </ion-col>
 
-                <ion-col
-                  class="ion-align-self-center"
-                  pull-sm="3"
-                  size="12"
-                  size-sm="3"
-                >
-                  <ion-back-button
-                    text="Cancelar"
-                    icon=""
-                    [defaultHref]="backUrl"
-                  ></ion-back-button
-                ></ion-col>
+                <ion-col class="ion-align-self-center" pull-sm="3" size="12" size-sm="3">
+                  <ion-back-button text="Cancelar" icon="" [defaultHref]="backUrl"></ion-back-button>
+                </ion-col>
               </ion-row>
             </ion-col>
           </ion-row>
